--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
 <body>
   <div id="container">
     <img src="https://cdn-icons-png.flaticon.com/512/3322/3322056.png" alt="Washing Machine Logo" class="logo">
-    <h2>Tycoon2.0 WashSmart</h2>
+    <h2>PG WashSmart</h2>
     <input type="text" id="phone" placeholder="Enter phone number" />
     <button onclick="check()">Check</button>
     <div class="loader" id="loader"></div>
