--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
 
     function pay(phone, amount, days) {
       const options = {
-        key: "rzp_test_NhQFMV57BI5o45",
+        key: "rzp_live_Ztpt7waMqVTDJr",
         amount: amount * 100,
         currency: "INR",
         name: "WashSmart",
